# timescaledb-energy_consumption

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: RealTimeConsumption-01012016-04082020.csv  RealTimeConsumption-01082011-03082020.csv  RealTimeConsumption-31122015-12092020.csv  RealTimeConsumption-31122015-18072020.csv
sql/: 01_init.sql  02_aggregates.sql
src/: forecast.py  ingest.py
