[project]
name = "timescaledb-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.7.4.5",
    "pandas==2.2.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.30",
    "xgboost>=3.2.0",
]
